--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
                     <input type="password" name="senha" placeholder="Digite sua senha">
                 </div>
                 <button class="btn-login">Login</button>
+                <p>---- ou ---- </p>
+                <button class="btn-registration">Cadastre-se</button>
             </div>
         </div>
     </div>
