--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
                     <label for="senha">Senha</label>
                     <input type="password" name="senha" placeholder="Digite sua senha">
                 </div>
-                <button class="btn-login">Login</button>
-                <p>---- ou ---- </p>
+                <button type="button" class="password">Esqueceu a senha?</button>
+                <button type="submit" class="btn-login">Login</button>
+                <p>Ainda não tem uma conta?</p>
                 <button class="btn-registration">Cadastre-se</button>
             </div>
         </div>
